--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,12 @@ numpy>=1.24.0
 # Gestione Dati
 pandas>=2.0.0
 
-# Generazione PDF (Avanzato con grafico)
-playwright>=1.40.0
+# Generazione PDF Avanzato (con grafico)
+# Usa versione 1.30 compatibile con macOS 12
+playwright==1.30.0
+
+# Ottimizzazione PDF (opzionale ma consigliato)
 PyPDF2>=3.0.0
 
-# Generazione PDF (Semplice, massima compatibilità)
+# Generazione PDF Semplice (massima compatibilità iOS/iPad)
 fpdf2>=2.7.0
