--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,111 @@
-streamlit>=1.28.0
-plotly>=5.17.0
+altair==6.0.0
+altgraph==0.17.5
+appnope==0.1.4
+asttokens==3.0.1
+attrs==25.4.0
+blinker==1.9.0
+brotli==1.2.0
+cachetools==6.2.4
+certifi==2025.11.12
+cffi==2.0.0
+charset-normalizer==3.4.4
+choreographer==1.2.1
+click==8.3.1
+comm==0.2.3
+contourpy==1.3.3
+coverage==7.13.0
+cssselect2==0.8.0
+cycler==0.12.1
+debugpy==1.8.19
+decorator==5.2.1
+defusedxml==0.7.1
+docopt==0.6.2
+executing==2.2.1
+Flask==3.1.2
+fonttools==4.61.1
+fpdf2==2.8.5
+gitdb==4.0.12
+GitPython==3.1.45
+greenlet==3.3.1
+idna==3.11
+iniconfig==2.3.0
+ipykernel==7.1.0
+ipython==9.8.0
+ipython_pygments_lexers==1.1.1
+itsdangerous==2.2.0
+jedi==0.19.2
+Jinja2==3.1.6
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
+jupyter_client==8.7.0
+jupyter_core==5.9.1
 kaleido==0.2.1
-numpy>=1.24.0
-pandas>=2.0.0
-playwright==1.30.0
-PyPDF2>=3.0.0
-fpdf2>=2.7.0
+kiwisolver==1.4.9
+logistro==2.0.1
+macholib==1.16.4
+MarkupSafe==3.0.3
+matplotlib==3.10.8
+matplotlib-inline==0.2.1
+mpmath==1.3.0
+narwhals==2.14.0
+nest-asyncio==1.6.0
+numpy==2.3.5
+orjson==3.11.7
+packaging==25.0
+pandas==2.3.3
+parso==0.8.5
+pexpect==4.9.0
+pillow==12.0.0
+pipreqs==0.4.13
+platformdirs==4.5.1
+playwright==1.58.0
+plotly==6.5.0
+pluggy==1.6.0
+prompt_toolkit==3.0.52
+protobuf==6.33.2
+psutil==7.1.3
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pyarrow==22.0.0
+pycparser==3.0
+pydeck==0.9.1
+pydyf==0.12.1
+pyee==13.0.0
+Pygments==2.19.2
+pyinstaller==6.17.0
+pyinstaller-hooks-contrib==2025.11
+pyparsing==3.2.5
+PyPDF2==3.0.1
+pyphen==0.17.2
+pytest==9.0.2
+pytest-cov==7.0.0
+pytest-timeout==2.4.0
+python-dateutil==2.9.0.post0
+pytz==2025.2
+pyzmq==27.1.0
+referencing==0.37.0
+reportlab==4.4.9
+requests==2.32.5
+rpds-py==0.30.0
+setuptools==80.9.0
+simplejson==3.20.2
+six==1.17.0
+smmap==5.0.2
+stack-data==0.6.3
+streamlit==1.52.2
+sympy==1.14.0
+tenacity==9.1.2
+tinycss2==1.5.1
+tinyhtml5==2.0.0
+toml==0.10.2
+tornado==6.5.4
+traitlets==5.14.3
+typing_extensions==4.15.0
+tzdata==2025.3
+urllib3==2.6.2
+wcwidth==0.2.14
+weasyprint==68.1
+webencodings==0.5.1
+Werkzeug==3.1.4
+yarg==0.1.10
+zopfli==0.4.0
