--- a/requirements.txt
+++ b/requirements.txt
@@ -13,5 +13,5 @@ pillow>=10.0.0
 # Per salvare grafico Plotly come PNG nel PDF
 # OPZIONALE: Se kaleido non funziona, il PDF verrà generato senza grafico
 # Il grafico sarà comunque visibile nell'applicazione web
-kaleido>=1.0.0
+kaleido==0.2.1
 matplotlib>=3.5.0
